--- a/Compass.fsproj
+++ b/Compass.fsproj
@@ -12,6 +12,7 @@
         <Compile Include="Models\UserModel.fs" />
         <Compile Include="Services\UserSession.fs" />
         <Compile Include="ViewModels\LoginViewModel.fs" />
+        <Compile Include="ViewModels\DashboardViewModel.fs" />
         <Compile Include="Views\SecondView.fs" />
         <Compile Include="Views\FirstView.fs" />
         <Compile Include="Views\LoginPage.fs" />
