Bunch of DB work for Safeguarding Reports table.

--- a/Compass.fsproj
+++ b/Compass.fsproj
@@ -8,10 +8,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Database.fs" />
+        <Compile Include="Database\Database.fs" />
+        <Compile Include="Database\DbConnect.fs" />
         <Compile Include="Models\UserModel.fs" />
+        <Compile Include="Models\ReportsModel.fs" />
+        <Compile Include="Database\Reports.fs" />
         <Compile Include="Services\UserSession.fs" />
         <Compile Include="ViewModels\LoginViewModel.fs" />
+        <Compile Include="ViewModels\ReportsViewModel.fs" />
+        <Compile Include="Views\ReportsUserControl.fs" />
         <Compile Include="ViewModels\DashboardViewModel.fs" />
         <Compile Include="Views\SecondView.fs" />
         <Compile Include="Views\FirstView.fs" />
@@ -49,6 +54,8 @@
     <ItemGroup>
       <Content Include="bin\Debug\net9.0\Data.db" />
     </ItemGroup>
+
+
 
 
 </Project>
