Implemented some new databases for more robust reporting - reporting form and back end is a wip

--- a/Compass.fsproj
+++ b/Compass.fsproj
@@ -12,6 +12,7 @@
         <Compile Include="Database\DbConnect.fs" />
         <Compile Include="Models\UserModel.fs" />
         <Compile Include="Models\NewStaffModel.fs" />
+        <Compile Include="Models\KeywordsModel.fs" />
         <Compile Include="Services\UserSession.fs" />
         <Compile Include="Models\ReportsModel.fs" />
         <Compile Include="Database\Reports.fs" />
