--- a/Compass.fsproj
+++ b/Compass.fsproj
@@ -13,6 +13,7 @@
         <Compile Include="Models\UserModel.fs" />
         <Compile Include="Models\NewStaffModel.fs" />
         <Compile Include="Models\KeywordsModel.fs" />
+        <Compile Include="Models\ChildData.fs" />
         <Compile Include="Services\UserSession.fs" />
         <Compile Include="Models\ReportsModel.fs" />
         <Compile Include="Database\Reports.fs" />
@@ -22,6 +23,7 @@
         <Compile Include="ViewModels\MainWindowViewModel.fs" />
         <Compile Include="ViewModels\NewStaffFormViewModel.fs" />
         <Compile Include="Views\ReportsUserControl.fs" />
+        <Compile Include="Views\ViewChildDataUC.fs" />
         <Compile Include="ViewModels\DashboardViewModel.fs" />
         <Compile Include="Views\SecondView.fs" />
         <Compile Include="Views\FirstView.fs" />
