--- a/Compass.fsproj
+++ b/Compass.fsproj
@@ -15,6 +15,7 @@
         <Compile Include="Models\KeywordsModel.fs" />
         <Compile Include="Models\ChildDataModel.fs" />
         <Compile Include="Services\UserSession.fs" />
+        <Compile Include="Services\OptionStringConverter.fs" />
         <Compile Include="Models\ReportsModel.fs" />
         <Compile Include="Database\Reports.fs" />
         <Compile Include="Database\Staff.fs" />
@@ -22,11 +23,11 @@
         <Compile Include="ViewModels\ReportsViewModel.fs" />
         <Compile Include="ViewModels\MainWindowViewModel.fs" />
         <Compile Include="ViewModels\NewStaffFormViewModel.fs" />
-        <Compile Include="Views\ViewChildDataUC.fs" />
+        <Compile Include="Views\ChildInfoUC.fs" />
+        <Compile Include="Views\ReportCountUC.fs" />
+        <Compile Include="Views\UpdateReport.fs" />
         <Compile Include="Views\ReportsUC.fs" />
         <Compile Include="ViewModels\DashboardViewModel.fs" />
-        <Compile Include="Views\SecondView.fs" />
-        <Compile Include="Views\FirstView.fs" />
         <Compile Include="Views\LoginPage.fs" />
         <Compile Include="Views\BannerTemplate.fs" />
         <Compile Include="Views\Dashboard.fs" />
